# dtos/user.dto.js
@@ -1,0 +1,15 @@
+export default class UserDTO{
+
+    constructor({
+        id,
+        username,
+        password,
+        email
+    }){
+        this.id = id;
+        this.username = username;
+        this.password = password;
+        this.email = email;
+    }
+
+}
